[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esutils"
version = "1.0.0"
authors = [
	{ name="0x78", email="contact@0x78.com" }
]
requires-python = ">=3.7"
description = "utility box for ECMAScript language tools. Partial translation of esutils"
readme = "README.md"
keywords = [
	"esutils",
    "escodegen",
    "ecmascript",
    "javascript",
	"estools"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Programming Language :: Python :: 3.7"
]

[project.urls]
"Homepage" = "https://github.com/0o120/esutils-python"

